<resources>
    <string name="app_name">Clover</string>

    <string name="default_notification_channel_id">Channel ID</string>

    <string name="default_notification_channel_name" translatable="true">Test</string>

    <string name="msg_token_fmt">Hello</string>

    <string name="facebook_app_id">187871052269766</string>

    <string name="kakao_app_key">39e715af5245d7c4336a7f2aedf43926</string>

    <string name="fb_login_protocol_scheme">fb187871052269766</string>
    <string name="register_name">이름</string>
    <string name="register_email">이메일</string>
    <string name="register_submit">가입하기</string>
    <string name="user_info_name">이름</string>
    <string name="user_info_email">이메일</string>
    <string name="user_info_bank">은행명</string>
    <string name="user_info_acc">계좌번호</string>
    <string name="user_info_submit">정보 수정</string>
    <string name="user_info_register_date">가입일</string>
    <string name="frd_recmd">친구 추가하기</string>

</resources>

