<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.jun.clover.userinfo.UserInfoViewModel"/>
        <variable
            name="userInfoVM"
            type="UserInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/in_app_header"
            layout="@layout/app_header"/>

        <ScrollView
            app:layout_constraintTop_toBottomOf="@id/in_app_header"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="30dp"
            android:gravity ="center"
            android:fillViewport="true">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/user_info_register_date"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:text="@{userInfoVM.user.registerDate}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_name"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@={userInfoVM.name}"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_email"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@={userInfoVM.email}"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_bank"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@={userInfoVM.bank}"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info_acc"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@={userInfoVM.acc}"
                    android:layout_marginBottom="20dp"/>

                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/user_info_submit"
                    android:onClick="@{()->userInfoVM.modifyUserInfo()}"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>