<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.jun.clover.login.LoginViewModel" />

        <variable
            name="loginVM"
            type="com.jun.clover.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            android:orientation="vertical" >

            <com.google.android.gms.common.SignInButton
                android:id="@+id/bt_google_login"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/bt_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <com.kakao.usermgmt.LoginButton
                android:id="@+id/bt_kakao_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_register"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:hint="@string/register_name"
                    android:text="@={loginVM.name}"/>
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:hint="@string/register_email"
                    android:text="@={loginVM.email}"/>
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <Button
                android:onClick="@{()->loginVM.registerUser()}"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/register_submit"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>